Updated information for first job

--- a/index.htm
+++ b/index.htm
@@ -35,53 +35,28 @@
 		<h1 class="heading" id="aboutMe">About Me</h1>
 		<div style="text-align:center;">
 			<p class="paragraphs" style="max-width:500px; padding:30px; padding-top:45px;">
-				An active computer science apprentice at Texas A&M University in my senior year of college. I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies. 
-				Currently exploring different facets of immersive technology and am looking to gain experience in the field of software engineering or virtual reality development.
-				I whole heartly embrace Texas culture and am fond of country western dancing,  virtual reality video games, and DIY computer & server building.
+				I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies, both old and new. 
+				Currently exploring different facets of immersive technology and working to gain experience in the field of virtual reality development or software engineering.
+				I whole heartly embrace Texas culture and am fond of country western dancing, running, virtual reality application, and DIY computer & server building.
 			</p>
 			<img class="profilePicture" src="images/Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
 		</div>
 	</div>
 	
-	
-	<!-- Education -->
+	<!-- Experience -->
 	<div class="darkBox" style="padding-bottom:30px;">
-		<h1 class="heading" id="education">Education</h1>
-		<div style="text-align:center;">
-			<div style="display:inline-block; vertical-align:top; text-align:center; padding-top:20px;">
-				<div style="text-align:center;">
-					<img src="images/TAM-Logo.png" alt="Texas A&M Logo" width="150" height="150px">
-				</div>
-				<div>
-					<p style="text-align:left; margin-top:0;">
-						Texas A&M University, College Station<br>
-						Class of 2024, Engineering Honors<br>
-						B.S. in Computer Science<br>
-						Minor in Business<br>
-						GPA: 3.91/4.00
-					</p>
-				</div>
-			</div>
-			
-			<div class="coursework">
-				<ul>
-					<li style="font-size:20px; color:#500000;"><b>Relevant Coursework</b></li>
-					<li>Data Structures and Algorithms</li>
-                    <li>Computer Graphics</li>
-                    <li>Data Visualization</li>
-					<li>Analysis of Algorithms</li>
-					<li>Discrete Structures for Computing</li>
-					<li>Computer & Network Security</li>
-                    <li>Parallel Computing</li>
-					<li>Computer Systems</li>
-				</ul>
+		<h1 class="heading" id="projects">Experience</h1>
+
+        <div class="project">
+			<div class="projectTitle" style="text-align: center; width: 275px;">
+				<h3>76th Software Engineering Group</h3>
+				<p>July 2024 - Present</p>
+				<p>Computer Scientist</p>
+                <a class="links" href="https://www.facebook.com/76SWEG/" target="_blank">
+					<img style="margin:5px; margin-left: -10px;" title="76th SWEG Facebook" src="images/76_SWEG.png" alt="76th SWEG Logo" width="150px" height="150px">
+				</a>
 			</div>
 		</div>
-	</div>
-	
-	<!-- Experience -->
-	<div style="padding-bottom:30px;">
-		<h1 class="heading" id="projects">Experience</h1>
 
         <div class="project">
 			<div class="projectTitle">
@@ -176,7 +151,7 @@
 	</div>
 
 	<!-- Projects -->
-	<div class="darkBox" style="padding-bottom:30px;">
+	<div style="padding-bottom:30px;">
 		<h1 class="heading" id="projects">Projects</h1>
 		
 		<div class="project">
@@ -246,6 +221,42 @@
 		
 	</div>
 	
+    <!-- Education -->
+	<div class="darkBox" style="padding-bottom:30px;">
+		<h1 class="heading" id="education">Education</h1>
+		<div style="text-align:center;">
+			<div style="display:inline-block; vertical-align:top; text-align:center; padding-top:20px;">
+				<div style="text-align:center;">
+					<img src="images/TAM-Logo.png" alt="Texas A&M Logo" width="150" height="150px">
+				</div>
+				<div>
+					<p style="text-align:left; margin-top:0;">
+						Texas A&M University, College Station<br>
+						Class of 2024, Summa Cum Laude<br>
+						B.S. in Computer Science<br>
+						Minor in Business<br>
+                        Engineering Honors<br>
+						GPA: 3.92/4.00
+					</p>
+				</div>
+			</div>
+			
+			<div class="coursework">
+				<ul>
+					<li style="font-size:20px; color:#2f8bc8;"><b>Relevant Coursework</b></li>
+					<li>Data Structures and Algorithms</li>
+                    <li>Computer Graphics</li>
+                    <li>Virtual Reality</li>
+                    <li>Data Visualization</li>
+					<li>Analysis of Algorithms</li>
+					<li>Discrete Structures for Computing</li>
+					<li>Computer & Network Security</li>
+                    <li>Parallel Computing</li>
+					<li>Computer Systems</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	
 	<!-- Extracurricular -->
 	<div style="padding-bottom:30px;">
@@ -386,7 +397,7 @@
 				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="47px" height="40px"></a>
 				<a href="mailto:robert.f.eads@gmail.com" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Dark.png" alt="Email me" width="50px" height="50px" style="vertical-align:bottom;"></a>
 		</div>
-		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2023</i>
+		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2024</i>
 	</div>
 	
 	
