--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
 		<p style="margin:5px;">The portofilo site of</p>
 		<h1 style="margin:5px;">Robert Fisher Eads</h1>
 		<div style="position:relative; width:fit-content; left:50%; transform:translateX(-50%); padding-bottom:30px;">
-				<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Light.png" alt="Find me on GitHub" width="35px" height="35px"></a>
+				<!--<a href="https://github.com/RobertEads" target="_blank" style="padding:15px;"><img src="images/GitHub_Logo_Light.png" alt="Find me on GitHub" width="35px" height="35px"></a>-->
 				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Light.png" alt="Find me on LinkedIn" width="41px" height="35px"></a>
 				<a href="mailto:robert.f.eads@gmail.com" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Light.png" alt="Email me" width="45px" height="45px" style="vertical-align:bottom;"></a>
 		</div>
@@ -37,7 +37,7 @@
 			<p class="paragraphs" style="max-width:500px; padding:30px; padding-top:45px;">
 				I'm a dedicated developer who enjoys learning new languages and experimenting with unfamiliar technologies, both old and new. 
 				Currently exploring different facets of immersive technology and working to gain experience in the field of virtual reality development or software engineering.
-				I whole heartly embrace Texas culture and am fond of country western dancing, running, virtual reality application, and DIY computer & server building.
+				I whole heartly embrace Texas culture and am fond of country western dancing, running, DIY computer & server building, and snowboarding.
 			</p>
 			<img class="profilePicture" src="images/Profile Picture Robert Eads.png" alt="Profile Picture Robert Eads">
 		</div>
@@ -55,6 +55,16 @@
                 <a class="links" href="https://www.facebook.com/76SWEG/" target="_blank">
 					<img style="margin:5px; margin-left: -10px;" title="76th SWEG Facebook" src="images/76_SWEG.png" alt="76th SWEG Logo" width="150px" height="150px">
 				</a>
+			</div>
+            <div class="projectDescription">
+				<p class="paragraphs" style="max-width:525px;"> </p>
+				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
+				<ul style="margin-top:0; padding-left:1em;">
+                    <li>Collaborated on 3 member team for 4 months to take integral tools though stages of the Software Development Life Cycle</li>
+                    <li>Engaged with 12+ person team at client site to develop flexible and sustainable C++ frameworks for future development</li>
+					<li> Produced detailed documentation for vender use in shortening development lead time and lightening integration workload</li>
+                    <li>Harnessed the GoogleTest Framework to create unit tests for more than 18 different C++ classes ensuring maintainability</li>
+				</ul>
 			</div>
 		</div>
 
@@ -75,7 +85,7 @@
                     </p>
 				<h4 style="margin-bottom:5px; margin-top:10px;"><u>Key Takeaways</u></h4>
 				<ul style="margin-top:0; padding-left:1em;">
-					<li>Conducted undergraduate research focused on combating climate change at a tier 1 research institution.</li>
+					<li>Conducted undergraduate research focused on combating climate change at a tier 1 research institution</li>
                     <li>Implemented program using Unreal Engine 5 in mixed reality to localize typical hazards of rising sea levels</li>
 				</ul>
 			</div>
@@ -236,7 +246,7 @@
 						B.S. in Computer Science<br>
 						Minor in Business<br>
                         Engineering Honors<br>
-						GPA: 3.92/4.00
+						GPA: 3.91/4.00
 					</p>
 				</div>
 			</div>
@@ -339,13 +349,6 @@
 					<span class="dot"></span>
 				</li>
 				<li class="skill">
-					<span>Unreal Engine 4</span>
-					<span class="dot"></span>
-					<span class="dot"></span>
-					<span class="dot"></span>
-					<span class="dot"></span>
-				</li>
-				<li class="skill">
 					<span>Git</span>
 					<span class="dot"></span>
 					<span class="dot"></span>
@@ -356,17 +359,19 @@
 					<span class="dot"></span>
 					<span class="dot"></span>
 				</li>
+                <li class="skill">
+					<span>ClangFormat</span>
+					<span class="dot"></span>
+					<span class="dot"></span>
+				</li>
 				<li class="skill">
 					<span>Linux Systems</span>
 					<span class="dot"></span>
 					<span class="dot"></span>
 				</li>
-				<li class="skill">
-					<span>Proxmox VE</span>
+                <li class="skill">
+					<span>PowerShell 5.1</span>
 					<span class="dot"></span>
-				</li>
-				<li class="skill">
-					<span>TrueNAS</span>
 					<span class="dot"></span>
 				</li>
 			</ul>
@@ -397,7 +402,7 @@
 				<a href="https://www.linkedin.com/in/robert-eads" target="_blank" style="padding:15px;"><img src="images/LinkedIn_Logo_Dark.png" alt="Find me on LinkedIn" width="47px" height="40px"></a>
 				<a href="mailto:robert.f.eads@gmail.com" target="_blank" style="padding:10px;"><img src="images/Gmail_Logo_Dark.png" alt="Email me" width="50px" height="50px" style="vertical-align:bottom;"></a>
 		</div>
-		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2024</i>
+		<i style="font-size:80%; position:absolute; bottom:12px; left:50%; transform:translateX(-50%);">© Robert Eads 2025</i>
 	</div>
 	
 	
